	- late rpmts reference causes premature free (#78862).
	- internal automagic dependency generation (disabled for now).
	- don't generate dependencies unless execute bit is set.
	- enable internal automagic dependency generation as default.
	- fix: add rpmlib(VersionedDependencies) if versioned Provides: found.
	- fix: add %%ifnarch noarch to debug_package macro.

4.0.4 -> 4.1:
	- loosely wire beecrypt library into rpm.
	- drop rpmio/base64.[ch] in favor of beecrypt.
	- drop lib/md5*.[ch] files in favor of beecrypt.
	- legacy: drop brokenMD5 support (rpm-2.3.3 to rpm-2.3.8 on sparc).
	- eliminate DYING code.
	- bind beecrypt md5/sha1 underneath rpmio.
	- create RFC-2440 OpenPGP API in rpmio.
	- proof-of-concept GPG/DSA verification for legacy signatures.
	- upgrade to beecrypt-2.2.0pre.
	- proof-of-concept PGP/RSA verification for legacy signatures.
	- ratchet up to lclint "strict" level.
	- upgrade to db-4.0.7.
	- use only header methods, routines are now static.
	- beecrypt is at least as good as pgp/gpg on verify, pulling the plug.
	- add :base64 and :armor format extensions, dump binary tags in hex.
	- proof-of-concept pubkey retrieval from RPM-{PGP,GPG}-KEY.
	- stupid macros to configure public key file paths.
	- all symbols but hdrVec are now forward references in linkage.
	- generate an rpm header on the fly for imported pubkeys.
	- wire transactions through rpmcli signature modes.
	- wire transactions through rpmcli query/verify modes.
	- wire transactions through rpmcli install/erase modes.
	- legacy signatures always checked (where possible) on package read.
	- wire transactions through rpmcli build modes.
	- lazy rpmdb open/close through transaction methods (mostly anyways).
	- no-brainer refcounts for rpmdb object.
	- check added header against transaction set, replace if newer.
	- transaction sets created in cli main.
	- no-brainer refcounts for ts object.
	- memory indices for dependency check are typedef'd and abstract'd.